<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <ImageView
        android:id="@+id/imgCity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.7"
        android:contentDescription="@string/img_from_city"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_default_weather" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/lytSwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/current_location"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_my_location_black_24dp" />

            <TextView
                android:id="@+id/tvCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/current_location" />
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/icCloudMainCityWeatherInfo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/content_desc_ic_cloud_main_city_weather_info"
        app:layout_constraintBottom_toTopOf="@+id/icTempMax"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@drawable/ic_cloud_main" />

    <TextView
        android:id="@+id/tvCityWeatherInfoDescription"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/icTempMax"
        app:layout_constraintStart_toEndOf="@+id/icCloudMainCityWeatherInfo"
        tools:text="Clear" />

    <ImageView
        android:id="@+id/icTempMax"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/content_desc_ic_temp_max"
        app:layout_constraintBottom_toTopOf="@+id/tvTemp"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_temp_max" />

    <TextView
        android:id="@+id/tvTempMax"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvTemp"
        app:layout_constraintStart_toEndOf="@+id/icTempMax"
        tools:text="21º" />

    <ImageView
        android:id="@+id/icTempMin"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/content_desc_ic_temp_min"
        app:layout_constraintBottom_toTopOf="@+id/tvTemp"
        app:layout_constraintStart_toEndOf="@+id/tvTempMax"
        app:srcCompat="@drawable/ic_temp_min" />

    <TextView
        android:id="@+id/tvTempMin"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvTemp"
        app:layout_constraintStart_toEndOf="@+id/icTempMin"
        tools:text="9º" />

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gdlVertical"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="10º" />

    <android.support.constraint.Guideline
        android:id="@+id/gdlVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</android.support.constraint.ConstraintLayout>